Add an Rd type to collect Read monad-y data in Decls.hs

--- a/refact-global-hse.cabal
+++ b/refact-global-hse.cabal
@@ -19,6 +19,7 @@ Library
     filemanip > 0.3.6.3,
     filemanip-extra,
     filepath,
+    haskell-names,
     haskell-src-exts,
     lens,
     lifted-base,
