--- a/refact-global-hse.cabal
+++ b/refact-global-hse.cabal
@@ -60,6 +60,7 @@ executable clean-imports
     base,
     data-default,
     directory,
+    haskell-names,
     refact-global-hse,
     filemanip > 0.3.6.3,
     filepath,
