--- a/refact-global-hse.cabal
+++ b/refact-global-hse.cabal
@@ -77,6 +77,7 @@ Test-Suite refact-global-hse-tests
     data-default,
     filepath,
     filemanip > 0.3.6.3,
+    haskell-names,
     haskell-src-exts,
     HUnit,
     lens,
