Clean up some imports

--- a/refact-global-hse.cabal
+++ b/refact-global-hse.cabal
@@ -74,6 +74,7 @@ Test-Suite refact-global-hse-tests
   Build-Depends:
     base,
     containers,
+    cpphs,
     data-default,
     filepath,
     filemanip > 0.3.6.3,
