Changes for haskell-src-exts-1ast

--- a/refact-global-hse.cabal
+++ b/refact-global-hse.cabal
@@ -20,7 +20,7 @@ Library
     filemanip-extra,
     filepath,
     haskell-names,
-    haskell-src-exts,
+    haskell-src-exts-1ast,
     lens,
     lifted-base,
     monad-control,
@@ -81,7 +81,7 @@ Test-Suite refact-global-hse-tests
     filepath,
     filemanip > 0.3.6.3,
     haskell-names,
-    haskell-src-exts,
+    haskell-src-exts-1ast,
     HUnit,
     lens,
     mtl,
