Changes for hse-1.18

--- a/refact-global-hse.cabal
+++ b/refact-global-hse.cabal
@@ -20,7 +20,7 @@ Library
     filemanip-extra,
     filepath,
     haskell-names,
-    haskell-src-exts-1ast,
+    haskell-src-exts >= 1.18,
     lens,
     lifted-base,
     monad-control,
@@ -79,7 +79,7 @@ executable decorate
     mtl,
     syb,
     data-default,
-    haskell-src-exts-1ast,
+    haskell-src-exts,
     HUnit,
     filepath,
     containers
@@ -96,7 +96,7 @@ Test-Suite refact-global-hse-tests
     filepath,
     filemanip > 0.3.6.3,
     haskell-names,
-    haskell-src-exts-1ast,
+    haskell-src-exts,
     HUnit,
     lens,
     mtl,
