Rename test suite

--- a/refact-global-hse.cabal
+++ b/refact-global-hse.cabal
@@ -68,7 +68,7 @@ executable refactor
     syb,
     utility-ht
 
-Test-Suite refact-global-hse-tests
+Test-Suite refactor-tests
   Type: exitcode-stdio-1.0
   Hs-Source-Dirs: tests
   Main-Is: Tests.hs
