--- a/refact-global-hse.cabal
+++ b/refact-global-hse.cabal
@@ -9,6 +9,10 @@ Maintainer: David Fox
 Cabal-Version: >= 1.9
 Build-Type: Simple
 
+flag filemanip0364
+  Description: forthcoming(?) filemanip-0.3.6.4 has a required bug fix
+  Default: False
+
 Library
   Hs-Source-Dirs: src
   Build-Depends:
@@ -17,7 +21,6 @@ Library
     cpphs,
     data-default,
     directory,
-    filemanip > 0.3.6.3,
     filemanip-extra,
     filepath,
     haskell-names,
@@ -46,6 +49,11 @@ Library
     SrcLoc
     Utils
   GHC-options: -Wall -O2
+  if flag(filemanip0364)
+    Build-Depends: filemanip > 0.3.6.3
+  else
+    Build-Depends: unix-compat
+    Exposed-Modules: System.FilePath.Find, System.FilePath.Glob, System.FilePath.GlobPattern
 
 executable refactor
   Hs-Source-Dirs: scripts
@@ -55,7 +63,6 @@ executable refactor
     containers,
     data-default,
     directory,
-    filemanip > 0.3.6.3,
     filepath,
     haskell-names,
     haskell-src-exts,
@@ -67,6 +74,10 @@ executable refactor
     refact-global-hse,
     syb,
     utility-ht
+  if flag(filemanip0364)
+    Build-Depends: filemanip > 0.3.6.3
+  else
+    Build-Depends: unix-compat
 
 Test-Suite refactor-tests
   Type: exitcode-stdio-1.0
@@ -78,7 +89,6 @@ Test-Suite refactor-tests
     cpphs,
     data-default,
     filepath,
-    filemanip > 0.3.6.3,
     haskell-names,
     haskell-src-exts,
     HUnit,
@@ -88,3 +98,7 @@ Test-Suite refactor-tests
     refact-global-hse,
     syb
   GHC-options: -Wall -O2
+  if flag(filemanip0364)
+    Build-Depends: filemanip > 0.3.6.3
+  else
+    Build-Depends: unix-compat
