Define MIN_VERSION_base in the test cases

--- a/refact-global-hse.cabal
+++ b/refact-global-hse.cabal
@@ -25,6 +25,7 @@ Library
     filepath,
     haskell-names,
     haskell-src-exts >= 1.18,
+    HUnit,
     lens,
     lifted-base,
     monad-control,
