Use hse-cpp-0.2 library

--- a/refact-global-hse.cabal
+++ b/refact-global-hse.cabal
@@ -25,6 +25,7 @@ Library
     filepath,
     haskell-names,
     haskell-src-exts >= 1.18,
+    hse-cpp,
     HUnit,
     lens,
     lifted-base,
@@ -71,7 +72,6 @@ executable refactor
     HUnit,
     lens,
     optparse-applicative,
-    optparse-generic,
     mtl,
     refact-global-hse,
     syb,
