Clean up haddock output

--- a/refact-global-hse.cabal
+++ b/refact-global-hse.cabal
@@ -41,6 +41,8 @@ Library
     syb,
     temporary
   Exposed-Modules:
+    Refactor
+  Other-Modules:
     Refactor.Clean
     Refactor.CPP
     Refactor.Decls
