* Version 1.0.1 * Remove support for "inlining" cpphs * Remove support for pre-ghc8 package version macros * type inference error * Update test cases

--- a/refact-global-hse.cabal
+++ b/refact-global-hse.cabal
@@ -1,5 +1,5 @@
 Name: refact-global-hse
-Version: 1.0
+Version: 1.0.1
 Synopsis: Identity transformations on sets of Haskell modules
 Description: Move declarations between modules, clean up import lists
 Homepage: https://github.com/ddssff/refact-global-hse
@@ -13,16 +13,13 @@ flag filemanip0364
   Description: forthcoming(?) filemanip-0.3.6.4 has a required bug fix
   Default: False
 
-flag local-cpphs
-  Default: False
-  Manual: True
-
 Library
   Hs-Source-Dirs: src
   Build-Depends:
     base,
     Cabal,
     containers,
+    cpphs,
     data-default,
     directory,
     filemanip-extra,
@@ -62,23 +59,6 @@ Library
   else
     Build-Depends: unix-compat
     Exposed-Modules: System.FilePath.Find, System.FilePath.Glob, System.FilePath.GlobPattern
-  if flag(local-cpphs)
-    Exposed-Modules:
-      Language.Preprocessor.Cpphs.Options
-      Language.Preprocessor.Cpphs.Tokenise
-      Language.Preprocessor.Cpphs.RunCpphs
-      Language.Preprocessor.Cpphs.ReadFirst
-      Language.Preprocessor.Cpphs.SymTab
-      Language.Preprocessor.Cpphs.MacroPass
-      Language.Preprocessor.Cpphs.Position
-      Language.Preprocessor.Cpphs.HashDefine
-      Language.Preprocessor.Cpphs.CppIfdef
-      Language.Preprocessor.Unlit
-      Language.Preprocessor.Cpphs
-    Build-Depends: old-time, old-locale, polyparse>=1.9
-    Hs-Source-Dirs: ../cpphs-1.20.2
-  else
-    Build-Depends: cpphs
 
 executable refactor
   Hs-Source-Dirs: scripts
@@ -113,6 +93,7 @@ Test-Suite refactor-tests
     base,
     Cabal,
     containers,
+    cpphs,
     data-default,
     filepath,
     haskell-names,
@@ -129,5 +110,3 @@ Test-Suite refactor-tests
     Build-Depends: filemanip > 0.3.6.3
   else
     Build-Depends: unix-compat
-  if !flag (local-cpphs)
-    Build-Depends: cpphs
